# network-live

./: .gitignore  Makefile  README.md  oss_wcdma_cells.txt  pyproject.toml  setup.cfg
maps/akmola-obl/: akmola-obl.dbf  akmola-obl.shp  akmola-obl.shx
maps/astana-city/: astana-city.dbf  astana-city.shp  astana-city.shx
maps/mangystau-obl/: mangystau-obl.dbf  mangystau-obl.shp  mangystau-obl.shx
network_live/: __init__.py  atoll.py  check_region.py  ftp.py  huawei_parser.py  main.py  physical_params.py  sql.py
network_live/beeline/: beeline_main.py  unwanted_cells.py
network_live/beeline/huawei/: gsm.py  huawei_main.py  lte.py  wcdma.py
network_live/beeline/nokia/: gsm.py  lte.py  nokia_main.py  utils.py  wcdma.py
network_live/beeline/zte/: parsing.py  zte_main.py
network_live/enm/: enm_cli.py  enm_main.py  gsm.py  lte.py  nr5g.py  utils.py  wcdma.py
network_live/oss/: gsm.py  oss_main.py  oss_ssh.py  wcdma.py
network_live/scripts/: update_beeline.py  update_enm.py  update_enm_lte.py  update_nl.py  update_oss.py  update_tele2.py  update_zte.py
network_live/tele2/: gsm.py  lte.py  nr.py  tele2_main.py  wcdma.py
network_live/zte/: gsm.py  select_data.py  wcdma.py  zte_main.py
