[tool.poetry]
name = "network-live"
version = "0.3.0"
description = "Collects all cells for all technologies for the Kcell radio network"
authors = ["Ramil Albakov <ramil.albakov2@gmail.com>"]
readme = "README.md"
packages = [{include = "network_live"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
enm-client-scripting = {path = "../local_packages/enm_client_scripting-1.22.2-py2.py3-none-any.whl"}
cx-Oracle = "^8.3.0"

[tool.poetry.scripts]
update-enm1-lte = "network_live.scripts.update_enm:update_enm1_lte"
update-enm2-lte = "network_live.scripts.update_enm:update_enm2_lte"
update-enm1-nr = "network_live.scripts.update_enm:update_enm1_nr"
update-enm2-nr = "network_live.scripts.update_enm:update_enm2_nr"
update-enm1-wcdma = "network_live.scripts.update_enm:update_enm1_wcdma"
update-enm2-wcdma = "network_live.scripts.update_enm:update_enm2_wcdma"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
